--- a/_posts/plan/2020-01-18-Welcoming 2020.md
+++ b/_posts/plan/2020-01-18-Welcoming 2020.md
@@ -1,8 +1,7 @@
 ---
 layout: post
 title: Welcoming 2020
-categories: [plan]
-tags: [phd, research]
+tags: [plan, phd, research]
 image: /assets/blogs/2020.jpg
 description: >
   Starting the new year right.
